# csad2526Ki-409VaskivValentyn2

./: CMakeLists.txt  README.md  checker.py  ci.cmd  ci.sh  google_sheets_export.txt  main.cpp  math_operations.cpp  math_operations.h  prompt_lists_1.txt  prompt_lists_2  prompt_lists_3.txt  prompt_lists_4.txt  prompt_lists_5.txt  script.txt
.github/workflows/: check.yml  ci.yml
input/: 409  409 - Список.csv  409-Список.csv  groups_409.csv
output/: 409 - Список.csv
tests/: unit_tests.cpp
